Improve construction strategy support